--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=proyectoConjunto
 spring.datasource.url=jdbc:h2:mem:39c4396f-7cbe-4bd4-9008-00d3f6a666d5
+spring.jpa.show-sql=true  
+spring.jpa.properties.hibernate.format_sql=true 
